# tiu-dam-backend

./: .env  docker-compose.yml  main.py  pyproject.toml
src/assets/: schemas.py  services.py
src/assets/domain/: events.py  models.py  repos.py  services.py  storage.py  vo.py
src/assets/infra/: s3.py  workflow.py
src/auth/domain/: models.py  vo.py
src/collections/domain/: models.py  repos.py
src/core/: database.py  settings.py
src/media/: constants.py  dependencies.py  services.py
src/media/domain/: models.py  repos.py
src/shared/: dependencies.py  schemas.py
src/shared/domain/: events.py  models.py  repos.py
src/shared/infra/: repos.py
src/shared/utils/: helpers.py
